@@ -1,0 +1,54 @@
+.TH cln-config 1 "November, 2000" "CLN @CL_VERSION@" "Bruno Haible"
+.SH NAME
+cln-config \- script to get information about the installed version of the CLN library
+.SH SYNOPSIS
+[\-\-prefix\fI[=DIR]\fP] [\-\-exec\-prefix\fI[=DIR]\fP] [\-\-version] [\-\-libs] [\-\-cppflags]
+.SH DESCRIPTION
+.PP
+.B cln-config
+is a tool that is used to determine the compiler and linker flags that
+should be used to compile and link programs that use CLN.
+.SH OPTIONS
+.TP
+.B \-\-version
+Print the currently installed version of CLN on the standard output.
+.TP
+.B \-\-libs
+Print the linker flags that are necessary to link a CLN program.
+.TP
+.B \-\-cppflags
+Print the compiler flags that are necessary to compile a CLN program.
+.TP
+.B \-\-prefix=PREFIX
+If specified, use PREFIX instead of the installation prefix that CLN was
+built with when computing the output for the \-\-cppflags and \-\-libs
+options. This option is also used for the exec prefix if \-\-exec\-prefix was
+not specified. This option must be specified before any \-\-libs or
+\-\-cppflags options.
+.TP
+.B \-\-exec\-prefix=PREFIX
+If specified, use PREFIX instead of the installation exec prefix that CLN
+was built with when computing the output for the \-\-cppflags and \-\-libs
+options.  This option must be specified before any \-\-libs or \-\-cppflags
+options.
+.SH AUTHORS
+.br
+Richard Kreckel <kreckel@ginac.de>
+.br
+Bruno Haible <haible@clisp.cons.org>
+.SH COPYRIGHT
+CLN is Copyright \(co Bruno Haible 1995-2000
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
